// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`XDSFormLayout > matches snapshot for horizontal direction 1`] = `
<div
  class="xds-form-layout horizontal XDSFormLayout__styles.base x78zum5 x18g69wz XDSFormLayout__styles.horizontal x1q0g3np x1a02dak"
  data-testid="layout"
>
  <input
    placeholder="First"
  />
  <input
    placeholder="Last"
  />
</div>
`;

exports[`XDSFormLayout > matches snapshot for horizontal-labels direction 1`] = `
<div
  class="xds-form-layout horizontal-labels XDSFormLayout__styles.base xdt5ytf XDSFormLayout__styles.horizontalLabels xrvj5dj x1pmbctz xlaq8a2 x7a106z xedohl4 x1rpgqan x1a1jff"
  data-testid="layout"
>
  <label>
    Name
  </label>
  <input
    placeholder="Name"
  />
</div>
`;

exports[`XDSFormLayout > matches snapshot for vertical direction 1`] = `
<div
  class="xds-form-layout vertical XDSFormLayout__styles.base x78zum5 xdt5ytf x18g69wz"
  data-testid="layout"
>
  <input
    placeholder="Name"
  />
  <input
    placeholder="Email"
  />
</div>
`;
